[gd_scene load_steps=28 format=3 uid="uid://b0jxk77jrielb"]

[ext_resource type="Script" uid="uid://dypluyixlvh6e" path="res://Scripts/player.gd" id="1_pnsbv"]
[ext_resource type="Texture2D" uid="uid://enju00cqbdup" path="res://Assets/Player/player_idle_down1.png" id="2_6t5aa"]
[ext_resource type="Texture2D" uid="uid://c8gcff7hv1it2" path="res://Assets/Player/player_attack_down1.png" id="2_h4iuc"]
[ext_resource type="Texture2D" uid="uid://caaig0rlfe2fs" path="res://Assets/Player/player_idle_left1.png" id="3_3smsa"]
[ext_resource type="Texture2D" uid="uid://c2wghvkbwy5kt" path="res://Assets/Player/player_walk_down1.png" id="3_fkybt"]
[ext_resource type="Texture2D" uid="uid://dhs3xrsybcukh" path="res://Assets/Player/player_attack_left1.png" id="3_qqcod"]
[ext_resource type="Texture2D" uid="uid://blmtgqhisi4sx" path="res://Assets/Player/player_idle_right1.png" id="4_8erm5"]
[ext_resource type="Texture2D" uid="uid://cclvqo6u7e6br" path="res://Assets/Player/player_attack_right1.png" id="4_igrcy"]
[ext_resource type="Texture2D" uid="uid://ehb6wnrixb5d" path="res://Assets/Player/player_walk_down2.png" id="4_x3wgy"]
[ext_resource type="Texture2D" uid="uid://dr6j6xfgvjdre" path="res://Assets/Player/player_idle_up1.png" id="5_7dp3o"]
[ext_resource type="Texture2D" uid="uid://d0favme4uluhm" path="res://Assets/Player/player_walk_left1.png" id="7_gymyn"]
[ext_resource type="Texture2D" uid="uid://b1f18jvmnl001" path="res://Assets/Player/player_walk_left2.png" id="8_pu2lt"]
[ext_resource type="Texture2D" uid="uid://bf56apc8rynp8" path="res://Assets/Player/player_walk_right1.png" id="9_ukyrk"]
[ext_resource type="Texture2D" uid="uid://bttidxp68if3n" path="res://Assets/Player/player_walk_right2.png" id="10_7dp3o"]
[ext_resource type="Texture2D" uid="uid://dd74tsafdfrxb" path="res://Assets/Player/player_walk_up1.png" id="12_h4iuc"]
[ext_resource type="Texture2D" uid="uid://tmvrwthvhi0x" path="res://Assets/Player/player_walk_up2.png" id="13_fd4e3"]
[ext_resource type="Texture2D" uid="uid://bvtslplgpnws4" path="res://Assets/Player/player_sword1.png" id="17_igrcy"]
[ext_resource type="Texture2D" uid="uid://dlyv402tx6lxm" path="res://Assets/UI/prompt_interact1.png" id="18_fs7ks"]
[ext_resource type="Texture2D" uid="uid://cc8xwaood13fh" path="res://Assets/UI/prompt_pickup1.png" id="19_l6n3p"]

[sub_resource type="SpriteFrames" id="SpriteFrames_6t5aa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_h4iuc")
}],
"loop": true,
"name": &"attack_down",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_qqcod")
}],
"loop": true,
"name": &"attack_left",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_igrcy")
}],
"loop": true,
"name": &"attack_right",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_fd4e3")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6t5aa")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"hurt_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3smsa")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"hurt_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8erm5")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"hurt_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7dp3o")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"hurt_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_6t5aa")
}],
"loop": true,
"name": &"idle_down",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_3smsa")
}],
"loop": true,
"name": &"idle_left",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_8erm5")
}],
"loop": true,
"name": &"idle_right",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_7dp3o")
}],
"loop": true,
"name": &"idle_up",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_fkybt")
}, {
"duration": 1.0,
"texture": ExtResource("4_x3wgy")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_gymyn")
}, {
"duration": 1.0,
"texture": ExtResource("8_pu2lt")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_ukyrk")
}, {
"duration": 1.0,
"texture": ExtResource("10_7dp3o")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_h4iuc")
}, {
"duration": 1.0,
"texture": ExtResource("13_fd4e3")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fs7ks"]
radius = 32.0
height = 85.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsqs6"]
size = Vector2(127.89359, 24.715769)

[sub_resource type="CircleShape2D" id="CircleShape2D_ji7x5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qqcod"]

[sub_resource type="Curve2D" id="Curve2D_ol22r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -85.71431, 0, -132.193, 0, 132.193, 342.85715, 42.857113)
}
point_count = 2

[sub_resource type="Curve2D" id="Curve2D_5se7t"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, -114.28571, 0, 0, 0, 0, 0, -357.143)
}
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_3o1vf"]
radius = 28.776407

[node name="CharacterBody2D" type="CharacterBody2D"]
z_index = 1
scale = Vector2(0.07, 0.07)
collision_layer = 65
collision_mask = 18
motion_mode = 1
script = ExtResource("1_pnsbv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 2
position = Vector2(0, 4)
scale = Vector2(8.5, 8.5)
sprite_frames = SubResource("SpriteFrames_6t5aa")
animation = &"idle_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 2
position = Vector2(0, 32)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_fs7ks")

[node name="Sword" type="Area2D" parent="."]
z_index = 1
position = Vector2(0, 22)
scale = Vector2(1.211, 1.453)
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
z_index = 1
position = Vector2(-3.4152952e-06, -4.4748187e-05)
scale = Vector2(0.89, 1)
shape = SubResource("RectangleShape2D_qsqs6")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="Sword"]
visible = false
z_index = 1
position = Vector2(-1.9073486e-06, -3.299911e-06)
rotation = -1.5707964
scale = Vector2(7, 7)
texture = ExtResource("17_igrcy")

[node name="DetectorCenter" type="Node2D" parent="."]
rotation = 1.5708

[node name="Detector" type="Area2D" parent="DetectorCenter"]
position = Vector2(-85.7143, 0)
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorCenter/Detector"]
shape = SubResource("CircleShape2D_ji7x5")

[node name="WallDetector" type="Area2D" parent="DetectorCenter"]
position = Vector2(-114.28571, 0.0004137132)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorCenter/WallDetector"]
shape = SubResource("CircleShape2D_qqcod")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(0, -28.5714)
curve = SubResource("Curve2D_ol22r")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(0, -85.71431)
rotation = 0.334737
rotates = false
loop = false

[node name="Path2DVerti" type="Path2D" parent="."]
curve = SubResource("Curve2D_5se7t")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2DVerti"]
position = Vector2(0, -114.28571)
rotation = -1.5708
rotates = false
loop = false

[node name="MirrorVer" type="StaticBody2D" parent="."]
visible = false
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MirrorVer"]
z_index = 2
position = Vector2(0, 32)
shape = SubResource("CircleShape2D_3o1vf")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MirrorVer"]
modulate = Color(1, 1, 1, 0.6862745)
z_index = 2
position = Vector2(0, 4)
scale = Vector2(8.5, 8.5)
sprite_frames = SubResource("SpriteFrames_6t5aa")
animation = &"walk_down"

[node name="Sword" type="Area2D" parent="MirrorVer"]
z_index = 1
position = Vector2(0, 22)
scale = Vector2(1.211, 1.453)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MirrorVer/Sword"]
z_index = 1
position = Vector2(-3.4152952e-06, -4.4748187e-05)
scale = Vector2(0.89, 1)
shape = SubResource("RectangleShape2D_qsqs6")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="MirrorVer/Sword"]
visible = false
modulate = Color(1, 1, 1, 0.6862745)
z_index = 1
position = Vector2(-1.9073486e-06, -3.299911e-06)
rotation = -1.5707964
scale = Vector2(7, 7)
texture = ExtResource("17_igrcy")

[node name="InteractPrompt" type="Control" parent="."]
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_left = -157.14284
offset_top = -157.14284
offset_right = 114.28615
offset_bottom = -106.14284
scale = Vector2(1.5, 1.5)

[node name="ColorRect" type="ColorRect" parent="InteractPrompt"]
layout_mode = 1
anchors_preset = -1
offset_right = 271.429
offset_bottom = 51.0
color = Color(0, 0, 0, 0.30980393)

[node name="ButtonIcon" type="TextureRect" parent="InteractPrompt"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 128.57141
offset_bottom = 46.85714
texture = ExtResource("18_fs7ks")

[node name="ActionPrompt" type="TextureRect" parent="InteractPrompt"]
layout_mode = 0
offset_left = 128.571
offset_top = 4.0
offset_right = 271.42856
offset_bottom = 46.85727
texture = ExtResource("19_l6n3p")
expand_mode = 5

[connection signal="body_entered" from="Sword" to="." method="sword_blocked"]
[connection signal="body_entered" from="DetectorCenter/Detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="DetectorCenter/Detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="DetectorCenter/WallDetector" to="." method="on_wall_detector_entered"]
[connection signal="body_exited" from="DetectorCenter/WallDetector" to="." method="on_wall_detector_exited"]
